--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^4.0.0",
-    "remark-mdx": "^3.0.0"
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/is-url": "^1.2.32",
